--- a/RecycleHub/package.json
+++ b/RecycleHub/package.json
@@ -21,6 +21,10 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.5",
+    "@ngrx/effects": "^19.0.1",
+    "@ngrx/router-store": "^19.0.1",
+    "@ngrx/store": "^19.0.1",
+    "@ngrx/store-devtools": "^19.0.1",
     "@tailwindcss/postcss": "^4.0.3",
     "express": "^4.18.2",
     "postcss": "^8.5.1",
