--- a/RecycleHub/package.json
+++ b/RecycleHub/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.2",
     "tailwindcss": "^4.0.3",
     "tslib": "^2.3.0",
     "uuid": "^11.0.5",
