--- a/RecycleHub/package.json
+++ b/RecycleHub/package.json
@@ -27,9 +27,12 @@
     "@ngrx/router-store": "^19.0.1",
     "@ngrx/store": "^19.0.1",
     "@ngrx/store-devtools": "^19.0.1",
+    "@primeng/themes": "^19.0.6",
     "@tailwindcss/postcss": "^4.0.3",
     "express": "^4.18.2",
     "postcss": "^8.5.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^19.0.6",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.2",
     "tailwindcss": "^4.0.3",
